Jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
 rules:
  - host: jenkins.hireyourtrainer.com
    http:
     paths: 
      - backend: 
          serviceName: jenkins-svc
          servicePort: 8080
